--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "grunt"]
 	path = grunt
-	url = https://amicoleo@bitbucket.org/amicoleo/grunt_basic-template.git
+	url = https://github.com/amicoleo/gruntTemplate.git
